# es2button

./: .gitignore  98-es2button.rules  CMakeLists.txt  Cargo.toml  Cross.toml  Dockerfile  LICENSE.txt  Makefile  README.md  bootstrap.sh  config.h.in  es2button@.service  main.cpp
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yml  native.yaml
es2button/: Cargo.toml
es2button/src/: list.rs  listener.rs  main.rs  types.rs
es2command/: Cargo.toml
es2command-sys/: Cargo.toml  build.rs
es2command-sys/cinterface/include/: common.hpp  delegate.hpp  scanner.hpp  wrapper.hpp
es2command-sys/cinterface/include/ES2Command/: ES2CommandAPI.h  ESCommandProperties.h  ESPropertyKeys.h  ESResultString.h  IESScanner.h  types.h
es2command-sys/cinterface/src/: delegate.cpp  internal.hpp  scanner.cpp  wrapper.cpp
es2command-sys/src/: lib.rs
es2command/src/: delegate.rs  helper.rs  lib.rs  scanner.rs  types.rs
example/: DS-310-default.SF2  README.md  a4_preset.SF2  card_preset.SF2  card_preset_png_via_custom_size.SF2  example-epsonscan2.sh  example-scanimage.sh  test.sh
include/: models.hpp
resources/: README.md  default.sh  postinst  preinst  systemd.service  udev-es2button.rules
src/: main.cpp
templates/: config.h.in
