[workspace]
members = [
  "es2button",
    "es2command",
    "es2command-sys",
]

default-members = [
  "es2command-sys",
  "es2command",
]

resolver = "2"

[workspace.dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
