[package]
name = "es2command-sys"
version = "0.0.1"
authors = ["Jan Rüth <es2button@djiehmail.com>"]
edition = "2021"
license = "MIT"
description = "Use buttons on epsonscan-supported scanners"
publish = false

[dependencies]
serde = { workspace = true }
serde_repr = { version = "0.1", default-features = false }

[build-dependencies]
bindgen = { version = "0.69", default-features = false , features = ["runtime", "prettyplease"] }
cc = { version = "1.0", default-features = false }
regex = { version = "1.10", default-features = false }