[package]
name = "es2command"
version = "0.0.1"
authors = ["Jan Rüth <es2button@djiehmail.com>"]
edition = "2021"
license = "MIT"
description = "Use buttons on epsonscan-supported scanners"
publish = false

[dependencies]
libc = { version = "0.2", default-features = false }
log = { workspace = true }
es2command-sys = { path = "../es2command-sys" }
foreign-types = { version = "0.5", default-features = false }
libloading = { version = "0.8", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }