[package]
name = "es2command"
version = "0.0.1"
authors = ["Jan Rüth <es2button@djiehmail.com>"]
edition = "2021"
license = "MIT"
description = "Use buttons on epsonscan-supported scanners"
publish = false

[dependencies]
libc = "0.2"
log = "0.4"
es2command-sys = { path = "../es2command-sys" }
foreign-types = "0.5"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"